synced translations files

--- a/plugins/CorePluginsAdmin/lang/el.json
+++ b/plugins/CorePluginsAdmin/lang/el.json
@@ -14,10 +14,6 @@
         "BackToExtendPiwik": "Πίσω στην Αγορά",
         "BeCarefulUsingPlugins": "Πρόσθετα που δεν έχουν αναπτυχθεί από την ομάδα του Piwik πρέπει να χρησιμοποιούνται με προσοχή: δεν τα ελέγξαμε.",
         "BeCarefulUsingThemes": "Θέματα που δεν έχουν αναπτυχθεί από την ομάδα του Piwik πρέπει να χρησιμοποιούνται με προσοχή: δεν τα ελέγξαμε.",
-        "ByDesigningOwnTheme": "%sσχεδιάζοντας το δικό σας θέμα%s",
-        "ByInstallingNewPluginFromMarketplace": "%sεγκαθιστώντας ένα νέο πρόσθετο από την Αγορά%s",
-        "ByInstallingNewThemeFromMarketplace": "%sεγκαθιστώντας ένα νέο θέμα από την Αγορά%s",
-        "ByWritingOwnPlugin": "%sδημιουργώντας το δικό σας πρόσθετο%s",
         "ByXDevelopers": "από %s προγραμματιστές",
         "Changelog": "Αρχείο αλλαγών",
         "ChangeSettingsPossible": "Μπορείτε να αλλάξετε τις %sρυθμίσεις%s για αυτό το πρόσθετο.",
@@ -25,12 +21,9 @@
         "Deactivate": "Απενεργοποίηση",
         "Developer": "Προγραμματιστής",
         "DoMoreContactPiwikAdmins": "Για να εγκαταστήσετε ένα νέο πρόσθετο ή θέμα, ελάτε σε επαφή με τους διαχειριστές του Piwik.",
-        "DownloadAndInstallPluginsFromMarketplace": "Μπορείτε να κατεβάζετε αυτόματα και να εγκαθιστάτε νέα πρόσθετα από την %sΑγορά%s.",
         "EmailToEnquireUpdatedVersion": "Παρακαλούμε στείλτε email στο %1$s και ζητήστε ενημέρωση της έκδοσης για το %2$s.",
-        "EnjoyAnotherLookAndFeelOfThemes": "Χαρείτε μια άλλη όψη & αίσθηση",
         "FeaturedPlugin": "Προβαλλόμενο πρόσθετο",
         "GetEarlyAccessForPaidPlugins": "Σημείωση: όλα τα πρόσθετα διατίθενται δωρεάν αυτή τη στιγμή, στο μέλλον θα ενεργοποιήσουμε τα Επί Πληρωμή Πρόσθετα στην Αγορά (%sΕλάτε σε επικοινωνία μαζί μας%s για νωρίτερη πρόσβαση).",
-        "GetNewFunctionality": "Αποκτήστε νέα λειτουργικότητα",
         "History": "Ιστορικό",
         "Inactive": "Ανενεργό",
         "InfoPluginUpdateIsRecommended": "Ενημερώστε τα πρόσθετά σας για να κερδίσετε από τις τελευταίες βελτιώσεις.",
@@ -42,11 +35,11 @@
         "LastCommitTime": "(τελευταία οριστικοποίηση %s)",
         "LastUpdated": "Τελευταία Ενημέρωση",
         "LicenseHomepage": "Ιστοσελίδα Άδειας",
-        "MainDescription": "Τα πρόσθετα (Plugins) επεκτείνουν και διευρύνουν την λειτουργικότητα του Piwik. Αφού εγκατασταθεί ένα πρόσθετο, μπορείτε να το ενεργοποιήσετε ή να το απενεργοποιήσετε εδώ.",
         "Marketplace": "Αγορά",
         "MarketplaceSellPluginSubject": "Αγορά - Πουλήστε ένα πρόσθετο",
         "MenuPlatform": "Πλατφόρμα",
         "MissingRequirementsNotice": "Παρακαλούμε αναβαθμίστε το %1$s %2$s σε νεότερη έκδοση, απαιτείται το %1$s %3$s.",
+        "MissingRequirementsPleaseInstallNotice": "Παρακαλούμε εγκαταστήστε τα %1$s %2$s καθώς απαιτούνται από το %3$s.",
         "NoPluginsFound": "Δε βρέθηκαν πρόσθετα",
         "NotAllowedToBrowseMarketplacePlugins": "Μπορείτε να δείτε τη λίστα των πρόσθετων που μπορούν να εγκατασταθούν για να προσαρμόσετε ή να επεκτείνετε την πλατφόρμα του Piwik. Παρακαλούμε επικοινωνήστε με τον διαχειριστή σας αν χρειάζεστε κάποιο από αυτά να εγκατασταθεί.",
         "NotAllowedToBrowseMarketplaceThemes": "Μπορείτε να δείτε τη λίστα των θεμάτων που μπορούν να εγκατασταθούν για να προσαρμόσετε την εμφάνιση της πλατφόρμας του Piwik. Παρακαλούμε επικοινωνήστε με τον διαχειριστή σας αν χρειάζεστε κάποιο από αυτά να εγκατασταθεί.",
@@ -54,8 +47,6 @@
         "NoZipFileSelected": "Επιλέξτε ένα αρχείο ZIP.",
         "NumDownloadsLatestVersion": "Τελευταία έκδοση: %s λήψεις",
         "NumUpdatesAvailable": "%s διαθέσιμες ενημερώσεις",
-        "OrByUploadingAPlugin": "ή με %sανέβασμα ενός πρόσθετου%s",
-        "OrByUploadingATheme": "ή με %sανέβασμα ενός θέματος%s",
         "Origin": "Προέλευση",
         "OriginCore": "Πυρήνας",
         "OriginThirdParty": "Από τρίτες πηγές",
