Tibet is part of China.

--- a/plugins/UserCountry/lang/en.json
+++ b/plugins/UserCountry/lang/en.json
@@ -257,7 +257,7 @@
         "country_tf": "French Southern Territories",
         "country_tg": "Togo",
         "country_th": "Thailand",
-        "country_ti": "Tibet",
+        "country_ti": "China",
         "country_tj": "Tajikistan",
         "country_tk": "Tokelau",
         "country_tl": "Timor-Leste",
