--- a/plugins/UserSettings/lang/it.json
+++ b/plugins/UserSettings/lang/it.json
@@ -1,17 +1,12 @@
 {
     "UserSettings": {
-        "BrowserFamilies": "Famiglie di Browser",
         "BrowserLanguage": "Lingua Browser",
-        "Browsers": "Browser",
         "BrowserWithNoPluginsEnabled": "%1$s con nessun plugin abilitato",
         "BrowserWithPluginsEnabled": "%1$s con plugin %2$s abilitati",
-        "ColumnBrowser": "Browser",
         "ColumnConfiguration": "Configurazione",
-        "ColumnOperatingSystem": "Sistema operativo",
         "ColumnResolution": "Risoluzione",
         "ColumnTypeOfScreen": "Tipo di schermo",
         "Configurations": "Configurazioni",
-        "GamingConsole": "Console di Gioco",
         "Language_aa": "afar",
         "Language_ab": "abkhazian",
         "Language_ae": "avestan",
@@ -197,18 +192,14 @@
         "Language_zh": "cinese",
         "Language_zu": "zulu",
         "LanguageCode": "Codice della lingua",
-        "OperatingSystemFamily": "Famiglia sistema operativo",
-        "OperatingSystems": "Sistemi Operativi",
         "PluginDescription": "Mostra le varie impostazioni per gli utenti: Browser, Famiglia del Browser, Sistema Operativo, Plugin, Risoluzione, Impostazioni Globali.",
         "PluginDetectionDoesNotWorkInIE": "N.B.: Questo plugin non funziona su Internet Explorer. Questo report è basato solamente sugli utenti di altri browser.",
         "Resolutions": "Risoluzioni",
+        "ScreenTypes": "Tipi di schermo",
         "VisitorSettings": "Impostazioni visitatori",
         "WideScreen": "Schermo panoramico",
-        "WidgetBrowsers": "Browser dei visitatori",
-        "WidgetBrowsersDocumentation": "Questo report contiene informazioni sul tipo di browser che i tuoi visitatori hanno utilizzato. Ciascuna versione del browser è elencata separatamente.",
         "WidgetGlobalVisitors": "Riepilogo configurazione visitatori",
         "WidgetGlobalVisitorsDocumentation": "Questo report mostra le configurazioni globali più comuni che i visitatori avevano. Una configurazione è la combinazione di un sistema operativo, un tipo browser e una risoluzione di schermo.",
-        "WidgetOperatingSystems": "Sistemi Operativi",
         "WidgetPlugins": "Lista dei Plugin",
         "WidgetPluginsDocumentation": "Questo report mostra quali plugin del browser i visitatori avevano abilitato. Questa informazione potrebbe essere importante per la scelta del giusto modo di inviare i tuoi contenuti.",
         "WidgetResolutions": "Risoluzione schermo",
